-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.2, 5.4.0 Alpha
-
None
-
ca81f8e469faba11f622af9a9ec537a7b3cec08f
As the summary says, qdoc is not handling such constructs properly. Say we have:
enum struct Capability {
Unset = 0,
Pausable = 1,
Stoppable = 2
};
Documenting that enum fails and will not generate any docs using markup like this:
/*! \enum Capability \value Unset No capabilities set for this task. \value Pausable The task is pausable during execution. \value ... */
For Gerrit Dashboard: QTBUG-41958 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
148585,2 | qdoc: Implement support for C++11 scoped enumerations. | 5.6 | qt/qttools | Status: MERGED | +2 | 0 |