qdoc: Implement support for C++11 scoped enumerations.

Task-number: QTBUG-41958
Change-Id: I290dc3f2f3072a1b6884d1484aa9109aa0b99dcc
Reviewed-by: Martin Smith <martin.smith@theqtcompany.com>